# vibe-agents

./: .env.example  .gitignore  README.md  pyproject.toml  setup.py
backend/: __init__.py  health.py  main.py  requirements.txt
backend/agents/: __init__.py  base.py  coder.py  debugger.py  planner.py  reviewer.py  router.py  tester.py
backend/api/: routes.py  session_manager.py
backend/integrations/: __init__.py  github.py
backend/orchestrator/: __init__.py  conversation.py  dialogue.py  engine.py
backend/sandbox/: __init__.py  executor.py
backend/storage/: __init__.py  database.py  file_locator.py  project_context.py
cli/: __init__.py  client.py  main.py  terminal_renderer.py
deploy/: install-windows.ps1  nssm-config.bat  start-server.bat  start.py
frontend/: app.js  chatdev-app.js  chatdev.css  index.html  styles.css
