[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-agents"
version = "0.6.0"
description = "AI coding assistant - Talk naturally. Build intelligently."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "pydantic>=2.5.3",
    "rich>=13.0.0",
]

[project.scripts]
vibe = "cli.main:main"

[tool.setuptools.packages.find]
include = ["cli*", "backend*"]
